versioned_docs/version-6.0/cloud/waf/analytics.md
---
sidebar_position: 6
title: "WAF Analytics Dashboard | Haltdos Cloud WAF"
description: "Monitor web traffic, security events, attack trends, and application performance using the Haltdos analytics dashboard."
---
# Analytics

---

## Overview

The Analytics page allows users to monitor the dashboard of all the listeners together or individually. It also allows to view based on different types:

1. **WAF Overview**

2. **WAF Device Fingerprinting**

3. **WAF Attack Overview**

4. **Attack Severity**

5. **Attack Device Fingerprinting**

6. **WAF HTTP Fingerprinting**

7. **Attack HTTP Fingerprinting**

8. **Real User Monitoring**

9. **Attack Categorization**

10. **Report**

11. **SLB**

12. **User Fingerprint**

You can customize the view based on the date range you want:

1. **Today**

2. **Yesterday**

3. **This Week**

4. **This Month**

5. **Custom Range with Custom Date & Time**

#### Other Features

**Auto Refresh**

Users can enable auto-refresh in order to refresh the real-time analytics for requests. The statistics will be displayed in graphs and tables in real-time.

**Filter**

Users can filter out analytics based on the specific Zone or Listener.