versioned_docs/version-7.0/cloud/waf/analytics.md
---
sidebar_position: 6
title: "WAF Analytics Dashboard | Haltdos Cloud"
description: "Monitor security events, attack trends, traffic analytics, and web application performance using the analytics dashboard."
---
# Analytics

---

## Overview

The Analytics page allows users to monitor the dashboard of all the listeners together or individually. It also allows to view based on different types:

1. **Traffic Summary** : Overall traffic summary with Geo heatmap, Top-N countries, Top-N Source IP, URL, etc.

2. **Fingerprinting & Bot Summary**: Analytics regarding Fingerprinting, Challenge and Response status, Bot classification, etc.

3. **WAF Attack Overview**: Analytics of Top-N attacking sources (IP, countries), OWASP Top 10 dashboard, etc.

4. **Attack Severity & Categorization**: Classification of attacks as Low, Medium, High, Critical along with summary of types of attacks detected

5. **SLB**: Load balancer metrics regarding uptime, connection status, monitoring alerts

6. **Custom Dashboards**: Create your own custom dashboard

You can customize the view based on the date range you want:

1. **Today**

2. **Yesterday**

3. **This Week**

4. **This Month**

5. **Custom Range with Custom Date & Time**

#### Other Features

**Auto Refresh**

Users can enable auto-refresh in order to refresh the real-time analytics for requests. The statistics will be displayed in graphs and tables in real-time.

**Filter**

Users can filter out analytics based on the specific Zone or Listener.